--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
-		"dev": "svelte-kit dev -p 6969",
+		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
-		"start": "svelte-kit start",
+		"start": "svelte-kit start -p 6969",
 		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@prismicio/client": "^4.0.0",
 		"@sveltejs/adapter-node": "next",
+		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/jit": "^0.1.1",
 		"@types/prismic-dom": "^2.1.1",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.2.5",
+		"cssnano": "^5.0.1",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.1.0",
@@ -26,7 +28,6 @@
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"prismic-dom": "^2.2.5",
-		"sass": "^1.0.0",
 		"svelte": "^3.29.0",
 		"svelte-preprocess": "^4.0.0",
 		"tailwindcss": "^2.0.3",
@@ -36,5 +37,6 @@
 	},
 	"engines": {
 		"node": ">= 12.17.0"
-	}
+	},
+	"dependencies": {}
 }
