--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
 	},
 	"devDependencies": {
 		"@prismicio/client": "^4.0.0",
+		"@stnew/prismic-types": "^1.2.4",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/adapter-static": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.84",
 		"@tailwindcss/jit": "^0.1.1",
 		"@types/prismic-dom": "^2.1.1",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -28,6 +29,7 @@
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"prismic-dom": "^2.2.5",
+		"prismic-javascript": "^3.0.2",
 		"svelte": "^3.29.0",
 		"svelte-preprocess": "^4.0.0",
 		"tailwindcss": "^2.0.3",
