--- a/package.json
+++ b/package.json
@@ -5,42 +5,46 @@
 	"type": "module",
 	"scripts": {
 		"dev": "svelte-kit dev",
+		"help": "svelte-kit help",
+		"devs": "svelte-kit dev --https SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem",
 		"build": "npm run routes && svelte-kit build",
 		"routes": "node ./utils/buildRoutes",
-		"start": "svelte-kit start -p 6969",
+		"start": "svelte-kit preview -p 6969",
 		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@felte/validator-yup": "^0.2.5",
 		"@prismicio/client": "^4.0.0",
 		"@stnew/prismic-types": "^1.2.4",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/adapter-static": "next",
-		"@sveltejs/kit": "^1.0.0-next.84",
-		"@tailwindcss/jit": "^0.1.1",
+		"@sveltejs/kit": "next",
+		"@tailwindcss/jit": "^0.1.18",
 		"@types/prismic-dom": "^2.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.19.0",
-		"@typescript-eslint/parser": "^4.19.0",
+		"@typescript-eslint/eslint-plugin": "^4.24.0",
+		"@typescript-eslint/parser": "^4.24.0",
 		"autoprefixer": "^10.2.5",
-		"cssnano": "^5.0.1",
-		"dotenv": "^8.2.0",
-		"eslint": "^7.22.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-svelte3": "^3.1.0",
-		"postcss": "^8.2.9",
+		"cssnano": "^5.0.4",
+		"dotenv": "^8.6.0",
+		"eslint": "^7.27.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.0",
+		"felte": "^0.6.8",
+		"pageclip": "^1.0.0",
+		"postcss": "^8.3.0",
 		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.2.0",
+		"prettier-plugin-svelte": "^2.3.0",
 		"prismic-dom": "^2.2.5",
-		"prismic-javascript": "^3.0.2",
-		"svelte": "^3.29.0",
-		"svelte-preprocess": "^4.0.0",
-		"tailwindcss": "^2.0.3",
-		"tslib": "^2.0.0",
-		"typescript": "^4.0.0",
-		"vite": "^2.1.0"
+		"svelte": "^3.38.2",
+		"svelte-preprocess": "^4.7.3",
+		"tailwindcss": "^2.1.2",
+		"tslib": "^2.2.0",
+		"typescript": "^4.2.4",
+		"vite": "^2.3.3",
+		"yup": "^0.32.9"
 	},
 	"engines": {
 		"node": ">= 12.17.0"
-	},
-	"dependencies": {}
+	}
 }
