--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
 		"@stnew/prismic-types": "^1.2.4",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/adapter-static": "next",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
+		"@sveltestack/svelte-query": "^1.4.1",
 		"@tailwindcss/jit": "^0.1.18",
 		"@types/prismic-dom": "^2.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.24.0",
-		"@typescript-eslint/parser": "^4.24.0",
-		"autoprefixer": "^10.2.5",
-		"cssnano": "^5.0.4",
+		"@typescript-eslint/eslint-plugin": "^4.25.0",
+		"@typescript-eslint/parser": "^4.25.0",
+		"autoprefixer": "^10.2.6",
+		"cssnano": "^5.0.5",
 		"dotenv": "^8.6.0",
 		"eslint": "^7.27.0",
 		"eslint-config-prettier": "^8.3.0",
@@ -37,11 +39,12 @@
 		"prettier-plugin-svelte": "^2.3.0",
 		"prismic-dom": "^2.2.5",
 		"svelte": "^3.38.2",
+		"svelte-icons": "^2.1.0",
 		"svelte-preprocess": "^4.7.3",
 		"tailwindcss": "^2.1.2",
 		"tslib": "^2.2.0",
-		"typescript": "^4.2.4",
-		"vite": "^2.3.3",
+		"typescript": "^4.3.2",
+		"vite": "^2.3.4",
 		"yup": "^0.32.9"
 	},
 	"engines": {
