--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/prismic-dom": "^2.1.1",
 		"@typescript-eslint/eslint-plugin": "^4.25.0",
 		"@typescript-eslint/parser": "^4.25.0",
+		"@zerodevx/svelte-toast": "^0.3.0",
 		"autoprefixer": "^10.2.6",
 		"cssnano": "^5.0.5",
 		"dotenv": "^8.6.0",
