--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
 		"@sveltestack/svelte-query": "^1.4.1",
 		"@tailwindcss/jit": "^0.1.18",
 		"@types/prismic-dom": "^2.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.25.0",
-		"@typescript-eslint/parser": "^4.25.0",
+		"@typescript-eslint/eslint-plugin": "^4.26.1",
+		"@typescript-eslint/parser": "^4.26.1",
 		"@zerodevx/svelte-toast": "^0.3.0",
 		"autoprefixer": "^10.2.6",
 		"cssnano": "^5.0.5",
 		"dotenv": "^8.6.0",
-		"eslint": "^7.27.0",
+		"eslint": "^7.28.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.0",
 		"felte": "^0.6.8",
@@ -42,10 +42,11 @@
 		"svelte": "^3.38.2",
 		"svelte-icons": "^2.1.0",
 		"svelte-preprocess": "^4.7.3",
-		"tailwindcss": "^2.1.2",
+		"svelte-seo": "^1.2.1",
+		"tailwindcss": "^2.1.4",
 		"tslib": "^2.2.0",
 		"typescript": "^4.3.2",
-		"vite": "^2.3.4",
+		"vite": "^2.3.7",
 		"yup": "^0.32.9"
 	},
 	"engines": {
