--- a/package.json
+++ b/package.json
@@ -6,49 +6,52 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"help": "svelte-kit help",
-		"devs": "svelte-kit dev --https SSL_CRT_FILE=localhost.pem SSL_KEY_FILE=localhost-key.pem",
 		"build": "npm run routes && svelte-kit build",
+		"preview": "svelte-kit preview",
 		"routes": "node ./utils/buildRoutes",
 		"start": "svelte-kit preview -p 6969",
 		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@felte/validator-yup": "^0.2.5",
-		"@prismicio/client": "^4.0.0",
-		"@stnew/prismic-types": "^1.2.4",
+		"@felte/validator-yup": "^0.2.13",
+		"@prismicio/client": "^5.1.0",
+		"@stnew/prismic-types": "^1.2.6",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/adapter-static": "next",
-		"@sveltejs/adapter-vercel": "^1.0.0-next.22",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
-		"@sveltestack/svelte-query": "^1.4.1",
 		"@tailwindcss/jit": "^0.1.18",
 		"@types/prismic-dom": "^2.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.26.1",
-		"@typescript-eslint/parser": "^4.26.1",
-		"autoprefixer": "^10.2.6",
-		"cssnano": "^5.0.5",
-		"dotenv": "^8.6.0",
-		"eslint": "^7.28.0",
+		"@typescript-eslint/eslint-plugin": "^5.8.0",
+		"@typescript-eslint/parser": "^5.8.0",
+		"autoprefixer": "^10.4.0",
+		"broadcast-channel": "^4.8.0",
+		"cssnano": "^5.0.14",
+		"dotenv": "^10.0.0",
+		"eslint": "^8.5.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.0",
-		"felte": "^0.6.8",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"felte": "^0.9.0",
 		"pageclip": "^1.0.0",
-		"postcss": "^8.3.0",
-		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.3.0",
-		"prismic-dom": "^2.2.5",
-		"svelte": "^3.38.2",
+		"postcss": "^8.4.5",
+		"prettier": "~2.5.1",
+		"prettier-plugin-svelte": "^2.5.1",
+		"prismic-dom": "^2.2.6",
+		"svelte": "^3.44.3",
 		"svelte-icons": "^2.1.0",
-		"svelte-preprocess": "^4.7.3",
-		"svelte-seo": "^1.2.1",
-		"tailwindcss": "^2.1.4",
-		"tslib": "^2.2.0",
-		"typescript": "^4.3.2",
-		"vite": "^2.3.7",
-		"yup": "^0.32.9"
+		"svelte-preprocess": "^4.10.1",
+		"svelte-seo": "^1.3.1",
+		"tailwindcss": "^3.0.7",
+		"tslib": "^2.3.1",
+		"typescript": "^4.5.4",
+		"vite": "^2.7.4",
+		"yup": "^0.32.11"
 	},
 	"engines": {
 		"node": ">= 12.17.0"
+	},
+	"dependencies": {
+		"@sveltestack/svelte-query": "^1.5.0"
 	}
 }
