--- a/package.json
+++ b/package.json
@@ -6,52 +6,52 @@
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"help": "svelte-kit help",
-		"build": "npm run routes && svelte-kit build",
+		"build-static": "npm run routes && svelte-kit build",
 		"preview": "svelte-kit preview",
 		"routes": "node ./utils/buildRoutes",
 		"start": "svelte-kit preview -p 6969",
-		"lint": "prettier --check . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write ."
+		"build": "svelte-kit build",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@felte/validator-yup": "^0.2.13",
-		"@prismicio/client": "^5.1.0",
-		"@stnew/prismic-types": "^1.2.6",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/adapter-static": "next",
+		"@prismicio/client": "beta",
+		"@prismicio/helpers": "beta",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
-		"@tailwindcss/jit": "^0.1.18",
-		"@types/prismic-dom": "^2.1.1",
-		"@typescript-eslint/eslint-plugin": "^5.8.0",
-		"@typescript-eslint/parser": "^5.8.0",
-		"autoprefixer": "^10.4.0",
-		"broadcast-channel": "^4.8.0",
+		"@typescript-eslint/eslint-plugin": "^5.8.1",
+		"@typescript-eslint/parser": "^5.8.1",
+		"autoprefixer": "^10.4.1",
+		"broadcast-channel": "^4.9.0",
 		"cssnano": "^5.0.14",
 		"dotenv": "^10.0.0",
-		"eslint": "^8.5.0",
+		"eslint": "^8.6.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"felte": "^0.9.0",
 		"pageclip": "^1.0.0",
-		"postcss": "^8.4.5",
 		"prettier": "~2.5.1",
 		"prettier-plugin-svelte": "^2.5.1",
-		"prismic-dom": "^2.2.6",
 		"svelte": "^3.44.3",
+		"svelte-check": "^2.2.11",
 		"svelte-icons": "^2.1.0",
 		"svelte-preprocess": "^4.10.1",
 		"svelte-seo": "^1.3.1",
-		"tailwindcss": "^3.0.7",
+		"tailwindcss": "^3.0.8",
 		"tslib": "^2.3.1",
 		"typescript": "^4.5.4",
-		"vite": "^2.7.4",
+		"vite": "^2.7.10",
+		"vite-plugin-svemix": "^0.4.2",
 		"yup": "^0.32.11"
 	},
 	"engines": {
 		"node": ">= 12.17.0"
 	},
 	"dependencies": {
-		"@sveltestack/svelte-query": "^1.5.0"
+		"@sveltestack/svelte-query": "^1.5.0",
+		"svemix": "^0.5.3"
 	}
 }
