--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,5 @@
-VITE_PRISMIC_ENDPOINT=
-VITE_PRISMIC_TOKEN=
-VITE_HCAPTCHA_SITEKEY=
-VITE_PRIVATE_HCAPTCHA_SECRETKEY=
-VITE_PRIVATE_SPOTIFY_REFRESH_TOKEN=
-VITE_PRIVATE_SPOTIFY_CLIENT_SECRET=
-VITE_PRIVATE_SPOTIFY_CLIENT_ID=
-VITE_PRIVATE_PAGECLIP=
-VITE_PRIVATE_GOOGLE_CAPTCHA_SITEKEY=
-VITE_PRIVATE_GOOGLE_CAPTCHA_SECRET=
+PRISMIC_REPO_NAME=
+PRISMIC_ACCESS_TOKEN=
+SPOTIFY_REFRESH_TOKEN=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CLIENT_ID=
