--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ node_modules
 /.svelte-kit
 /package
 .env
-/utils/routelist.json
-.vercel_build_output/
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
