--- a/package.json
+++ b/package.json
@@ -1,57 +1,40 @@
 {
-	"name": "henryportfolio",
+	"name": "henry-learn-svelte-stable",
 	"version": "0.0.1",
-	"license": "MIT",
-	"type": "module",
+	"private": true,
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"help": "svelte-kit help",
-		"build-static": "npm run routes && svelte-kit build",
-		"preview": "svelte-kit preview",
-		"routes": "node ./utils/buildRoutes",
-		"start": "svelte-kit preview -p 6969",
-		"build": "svelte-kit build",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@felte/validator-yup": "^0.2.13",
-		"@prismicio/client": "beta",
-		"@prismicio/helpers": "beta",
-		"@sveltejs/adapter-vercel": "next",
-		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.8.1",
-		"@typescript-eslint/parser": "^5.8.1",
-		"autoprefixer": "^10.4.1",
-		"broadcast-channel": "^4.9.0",
-		"cssnano": "^5.0.14",
-		"dotenv": "^10.0.0",
-		"eslint": "^8.6.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
-		"felte": "^0.9.0",
-		"pageclip": "^1.0.0",
-		"prettier": "~2.5.1",
-		"prettier-plugin-svelte": "^2.5.1",
-		"svelte": "^3.44.3",
-		"svelte-check": "^2.2.11",
-		"svelte-icons": "^2.1.0",
-		"svelte-preprocess": "^4.10.1",
-		"svelte-seo": "^1.3.1",
-		"tailwindcss": "^3.0.8",
-		"tslib": "^2.3.1",
-		"typescript": "^4.5.4",
-		"vite": "^2.7.10",
-		"vite-plugin-svemix": "^0.4.2",
-		"yup": "^0.32.11"
+		"@prismicio/client": "^6.7.1",
+		"@prismicio/helpers": "^2.3.6",
+		"@prismicio/svelte": "^0.0.4",
+		"@prismicio/types": "^0.2.4",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/kit": "^1.0.0",
+		"@sveltestack/svelte-query": "^1.6.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"svelte": "^3.54.0",
+		"svelte-check": "^2.9.2",
+		"tailwindcss": "^3.2.4",
+		"tslib": "^2.4.1",
+		"typebot-js": "^2.2.14",
+		"typescript": "^4.9.3",
+		"vite": "^4.0.0"
 	},
-	"engines": {
-		"node": ">= 12.17.0"
-	},
-	"dependencies": {
-		"@sveltestack/svelte-query": "^1.5.0",
-		"svemix": "^0.5.3"
-	}
+	"type": "module"
 }
